[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/camera_limiter/camera_limit_manager.gd" type="Script" id=1]
[ext_resource path="res://addons/camera_limiter/individual_limit.tscn" type="PackedScene" id=2]

[node name="CameraLimiter" type="Node"]
script = ExtResource( 1 )

[node name="debug" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="debug"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Label" parent="debug/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="Label" parent="debug/VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Label" parent="debug/VBoxContainer"]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="Label" parent="debug/VBoxContainer"]
margin_top = 54.0
margin_right = 40.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="individual_limit_left" parent="." instance=ExtResource( 2 )]
limit_name = "limit_left"

[node name="individual_limit_right" parent="." instance=ExtResource( 2 )]
limit_name = "limit_right"
direction = 1

[node name="individual_limit_top" parent="." instance=ExtResource( 2 )]
limit_name = "limit_top"

[node name="individual_limit_bottom" parent="." instance=ExtResource( 2 )]
limit_name = "limit_bottom"
direction = 1
